--- a/cdk/ecs-cdk/ecs-anywhere/requirements.txt
+++ b/cdk/ecs-cdk/ecs-anywhere/requirements.txt
@@ -1,6 +1,6 @@
 boto3
-aws-cdk-lib==2.2.0
-constructs>=10.0.0,<11.0.0
+aws-cdk-lib==2.77.0
+constructs
 #aws_cdk.aws_ecs 
 #aws_cdk.aws_ec2 
 #aws_cdk.aws_elasticloadbalancingv2
